--- a/mall-portal/pom.xml
+++ b/mall-portal/pom.xml
@@ -22,6 +22,7 @@
             <groupId>com.macro.mall</groupId>
             <artifactId>mall-mbg</artifactId>
         </dependency>
+        <!--自定义权限校验框架-->
         <dependency>
             <groupId>com.macro.mall</groupId>
             <artifactId>mall-security</artifactId>
