--- a/mall-portal/src/main/resources/application-dev.yml
+++ b/mall-portal/src/main/resources/application-dev.yml
@@ -17,17 +17,18 @@ spring:
         login-password: druid
   data:
     mongodb:
-      host: localhost
+      host: 192.168.200.223
       port: 27017
       database: mall-port
+
   redis:
-    host: localhost # Redis服务器地址
-    database: 0 # Redis数据库索引（默认为0）
+    host: 192.168.200.223 # Redis服务器地址
+    database: 1 # Redis数据库索引（默认为0）
     port: 6379 # Redis服务器连接端口
     password: # Redis服务器连接密码（默认为空）
     timeout: 300ms # 连接超时时间（毫秒）
   rabbitmq:
-    host: localhost
+    host: 192.168.200.223
     port: 5672
     virtual-host: /mall
     username: mall
@@ -39,6 +40,6 @@ logging:
     com.macro.mall: debug
 
 logstash:
-  host: localhost
+  host: 192.168.200.223
   enableInnerLog: false
 
